--- a/arch/arm/configs/fenomenalmod_defconfig
+++ b/arch/arm/configs/fenomenalmod_defconfig
@@ -1,4 +1,5 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_LOCALVERSION="+FenomenalMOD-R01-PLUS"
 CONFIG_SYSVIPC=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
