--- a/arch/arm/configs/fenomenalmod_defconfig
+++ b/arch/arm/configs/fenomenalmod_defconfig
@@ -563,3 +563,13 @@ CONFIG_PN547_I2C=m /* [BUGFIX]-Mod- by TCTNB.XQJ, 2014/05/20, BUG 641475 ,Perso 
 CONFIG_MSM_BUSPM_DEV=m
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_MSM_AVTIMER=y
+
+#
+# FenomenalMOD Extras
+#
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_BLUACTIVE=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE_PRO=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
